[metadata]
name = cloud-tasks-deferred-v2
description = A deferred library for Google Cloud Tasks
long_description = file: README.md
url = https://github.com/grktsh/python-cloud-tasks-deferred
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
package_dir =
    = src
install_requires =
    google-cloud-tasks >= 2.0.0

[options.extras_require]
test =
    pytest >= 4.4, < 6
    pytest-cov
    pytest-mock
    pytest-xdist
    falcon

[options.packages.find]
where = src

[bdist_wheel]
universal = 1

[coverage:run]
branch = True
parallel = True
source =
    cloud_tasks_deferred_v2
omit =
    */cloud_tasks_deferred_v2/__version__.py

[coverage:paths]
source =
    src
    */site-packages

[coverage:report]
show_missing = True

[tool:pytest]
testpaths = tests

[flake8]
ignore =
    E203
    W503
